pxc/tests/test_19_thread/thr5.px
import test_common "";

namespace ttest;
import thread "";

multithreaded struct my_thread_obj (io::ioptr sys0) {
  int x;
  int y;
  io::ioptr sys = sys0;
  function void main() {
    io::file::fileptr stdout = io::standard::get_stdout(sys);
    io::standard::file_println(*stdout, "my thread main");
    io::standard::file_println(*stdout, x);
    io::standard::file_println(*stdout, y);
  }
}

function void test1()
{
  io::ioptr i = io::ioptr(io::impl::io_impl());
    // error: io_impl is not default-constructible
  threadptr thr = thread_create(my_thread_obj(i));
  thr.join();
}

test1();

